--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>translateApp</title>
 	<link href="https://cdn.bootcss.com/normalize/7.0.0/normalize.min.css" rel="stylesheet">
 	<link href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
-	<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/1.10.0/jquery.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 	<script src="https://cdn.bootcss.com/blueimp-md5/2.7.0/js/md5.min.js"></script>  
 	<style>
